<resources>
    <string name="app_name">ZOA バーコードリーダー</string>
    <string name="btnScan_Label">カメラ起動</string>
    <string name="btnHistory_Label">履歴</string>
    <string name="app_result_data">ZOA_Result</string>
    <string name="btnItemCode">あいてむ</string>
    <string name="btnItemCodeSearch">商品コード検索</string>
    <string name="btnItemNoSearch">商品番号検索</string>
    <string name="btnSearch">検索</string>
    <string name="btnGUID">GUID</string>
    <string name="btnCopy">コピー</string>
    <string name="btnIDOpen">ID表示</string>
    <string name="btnSave">保存</string>
</resources>
