<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnScan"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="btnScan_OnClick"
            android:text="@string/btnScan_Label"
            tools:layout_constraintHorizontal_weight="1"
            tools:layout_constraintVertical_weight="1" />

        <Button
            android:id="@+id/btnItemNoSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="btnNo_OnClick"
            android:text="@string/btnItemNoSearch" />

        <Button
            android:id="@+id/btnItemCodeSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="btnCode_OnClick"
            android:text="@string/btnItemCodeSearch" />

        <Button
            android:id="@+id/btnGUIDOpen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:onClick="btnGUIDOpen_OnClick"
            android:text="@string/btnIDOpen" />

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0"
            android:onClick="btnHistory_OnClick"
            android:text="@string/btnHistory_Label"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>